src/test/ui/type-alias-impl-trait/generic_duplicate_param_use5.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/generic_duplicate_param_use5.rs:16:1
   |
LL | fn three<T: Debug, U: Debug>(t: T, u: U) -> Two<T, U> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `(T, U)`, got `(U, T)`
   |
note: previous use here
  --> $DIR/generic_duplicate_param_use5.rs:12:1
   |
LL | fn two<T: Debug, U: Debug>(t: T, u: U) -> Two<T, U> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: `T` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use5.rs:8:18
   |
LL | type Two<T, U> = impl Debug;
   |                  ^^^^^^^^^^ `T` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = note: required because of the requirements on the impl of `Debug` for `(T, U)`
help: consider restricting type parameter `T`
   |
LL | type Two<T: Debug, U> = impl Debug;
   |           ^^^^^^^

error[E0277]: `U` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use5.rs:8:18
   |
LL | type Two<T, U> = impl Debug;
   |                  ^^^^^^^^^^ `U` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = note: required because of the requirements on the impl of `Debug` for `(T, U)`
help: consider restricting type parameter `U`
   |
LL | type Two<T, U: Debug> = impl Debug;
   |              ^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
